navbar issues on mobile - changed to vw, and space around on small media query

--- a/my-app/src/components/Navbar/navbar.css
+++ b/my-app/src/components/Navbar/navbar.css
@@ -5,7 +5,7 @@
     position: sticky;
     top: 0em;
     height: 8em;
-    width: 100%;
+    width: 100vw;
     background-color: var(--secondary-color);
     color: var(--font-color);
     z-index: 1;
@@ -22,7 +22,7 @@
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
     .navbar {
-        justify-content: center;
+        justify-content: space-around;
     }
 }
 .navbar ul li a h3:hover {
